--- a/ICinema/Views/AppUser/Register.cshtml
+++ b/ICinema/Views/AppUser/Register.cshtml
@@ -1,12 +1,12 @@
 ﻿@using ICinema.ViewModels
-@model LoginVM
+@model RegisterVM
 @{
-	ViewData["Title"] = "Login page";
+	ViewData["Title"] = "Register page";
 }
-<h2>Login</h2>
+<h2>@ViewData["Title"]</h2>
 <form method="post">
-	
-	<div class="form-group" asp-controller="AppUser" asp-action="Login">
+
+	<div class="form-group" asp-controller="AppUser" asp-action="Register">
 		<label asp-for="Email" class="control-label"></label>
 		<input asp-for="Email" class="form-control" placeholder="Enter Email"> </input>
 		<span asp-validation-for="Email" class="text-danger"></span>
@@ -17,20 +17,24 @@
 		<input asp-for="Password" class="form-control" placeholder="Enter Password"> </input>
 		<span asp-validation-for="Password" class="text-danger"></span>
 	</div>
+	<div class="form-group">
+		<label asp-for="ConfirmPassword" class="control-label"></label>
+		<input asp-for="ConfirmPassword" class="form-control" placeholder="Confirm Password"> </input>
+		<span asp-validation-for="ConfirmPassword" class="text-danger"></span>
+	</div>
 	<div class="row">
 		<div class="col-6">
-			<button style="width:100%" type="submit" class="btn btn-primary">Login</button>
+			<button style="width:100%" type="submit" class="btn btn-primary">Register</button>
 		</div>
 		<div class="col-6">
-			<a style="width:100%" class="btn btn-primary" asp-controller="AppUser" asp-action="Register">Sign Up</a>
+			<a style="width:100%" class="btn btn-primary" asp-controller="AppUser" asp-action="Login">Sign In</a>
 		</div>
-		
+
 	</div>
-	
-	
-	
+
+
+
 </form>
 <div>
 	<span>@Html.ValidationSummary(true, "", new { @class = "text-danger" })</span>
 </div>
-
