Add Log Out functionality

--- a/ICinema/Views/AppUser/Index.cshtml
+++ b/ICinema/Views/AppUser/Index.cshtml
@@ -10,14 +10,14 @@
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
-                            <a class="nav-link text-white" asp-area="" asp-controller="Home" asp-action="Index">Налаштування</a>
+                            <a class="nav-link text-white" asp-area="" asp-controller="Home" asp-action="Index">Settings</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-white" asp-area="" asp-controller="Home" asp-action="Privacy">Підтримка</a>
+                            <a class="nav-link text-white" asp-area="" asp-controller="Home" asp-action="Privacy">Support</a>
                         </li>
 
                         <li class="nav-item">
-                            <a class="nav-link text-white" asp-area="" asp-controller="AppUser" asp-action="Login">Вхід</a>
+                            <a class="nav-link text-white" asp-area="" asp-controller="AppUser" asp-action="LogOut">Log Out</a>
                         </li>
 
                     </ul>
