--- a/ICinema/Views/AppUser/Index.cshtml
+++ b/ICinema/Views/AppUser/Index.cshtml
@@ -1,7 +1,25 @@
-﻿
+﻿@using ICinema.ViewModels
+@model UserPersonalProfileVM
 @{
     ViewData["Title"] = "Personal office";
 }
+<head>
+    <style>
+        
+        .card {
+            background-color: #000;
+            border: 1px solid white;
+            position: relative;
+            color:white;
+        }
+        .col{
+            
+            display: flex;
+            align-items: center;
+            
+        }
+    </style>
+</head>
 <body>
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light border-bottom box-shadow mb-3">
@@ -25,4 +43,78 @@
             </div>
         </nav>
     </header>
+    <div class="container mt-4">
+        <h1 class="text-center">Особистий Кабінет</h1>
+
+        <div class="card mt-4">
+            <div class="card-body">
+                <div class="row">
+                    <div class="col-6 d-flex align-items-center">
+                        <h4 class="card-title">Ваша електронна адреса: @Model.Email</h4>
+                    </div>
+                    <div class="col-6 d-flex align-items-center">
+                        <a asp-action="Index">(Редагувати)</a>
+                    </div>
+                    
+                    
+                </div>
+                <div class="row">
+                    <div class="col-6 d-flex align-items-center">
+                        <h4 class="card-title mt-4">Ваш номер телефону: @Model.PhoneNumber</h4>
+                    </div>
+                    <div class="col-6 d-flex align-items-center">
+                        <a asp-action="Index">(Редагувати)</a>
+                    </div>
+                </div>
+                
+            </div>
+        </div>
+
+        <div class="card mt-4">
+            <div class="card-body">
+                <div class="row">
+                    <div class="col-6 d-flex align-items-center">
+                        <h4 class="card-title">Ваш Баланс: @Model.Balance грн</h4>
+                    </div>
+                    
+                </div>
+                <div class="row">
+                    <div class="col-6 d-flex align-items-center">
+                        <h4 class="card-title">Ваша картка</h4>
+                    </div>
+                    <div class="col-6 d-flex align-items-center">
+                        <a asp-action="Index">(Редагувати)</a>
+                    </div>
+                </div>
+                
+            </div>
+        </div>
+
+        @* <div class="mt-4">
+            <h2>Ваші Білети</h2>
+            <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+                <div class="carousel-inner">
+                    @for (int i = 0; i < Model.MyTickets.Count; i++)
+                    {
+                        var ticket = Model.MyTickets.ElementAt(i);
+                        <div class="carousel-item @(i == 0 ? "active" : "")">
+                            <img class="d-block w-100" src="@ticket.ImageUrl" alt="Ticket image">
+                            <div class="carousel-caption d-none d-md-block">
+                                <h5>@ticket.EventName</h5>
+                                <p>@ticket.Date.ToString("HH:mm")</p>
+                            </div>
+                        </div>
+                    }
+                </div>
+                <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="sr-only">Previous</span>
+                </a>
+                <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="sr-only">Next</span>
+                </a>
+            </div>
+        </div> *@
+    </div>
 </body>
