--- a/ICinema/Views/AppUser/EditPhoneNumber.cshtml
+++ b/ICinema/Views/AppUser/EditPhoneNumber.cshtml
@@ -4,7 +4,7 @@
 	ViewData["Title"] = "Edit Phone Number Page";
 }
 <body>
-	<h2>ViewData["Title"]</h2>
+	<h2>@ViewData["Title"]</h2>
 	<form method="post">
 		<div class="form-group">
 			<label asp-for="PhoneNumber" class="control-label"></label>
@@ -24,5 +24,8 @@
 
 
 	</form>
+	<div>
+		<span>@Html.ValidationSummary(true, "", new { @class = "text-danger" })</span>
+	</div>
 </body>
 
