--- a/ICinema/Views/AppUser/Index.cshtml
+++ b/ICinema/Views/AppUser/Index.cshtml
@@ -102,31 +102,33 @@
             </div>
         </div>
 
-        @* <div class="mt-4">
+        <div class="mt-4">
             <h2>Ваші Білети</h2>
-            <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+            <div id="carouselTicketsControls" class="carousel slide" data-ride="carousel">
                 <div class="carousel-inner">
-                    @for (int i = 0; i < Model.MyTickets.Count; i++)
-                    {
-                        var ticket = Model.MyTickets.ElementAt(i);
-                        <div class="carousel-item @(i == 0 ? "active" : "")">
-                            <img class="d-block w-100" src="@ticket.ImageUrl" alt="Ticket image">
-                            <div class="carousel-caption d-none d-md-block">
-                                <h5>@ticket.EventName</h5>
-                                <p>@ticket.Date.ToString("HH:mm")</p>
+                    @if(Model.MyTickets!=null){
+                        @foreach(var ticket in Model.MyTickets)
+                        {
+                        
+                            <div class="carousel-item">
+                                <img class="d-block w-100" src="@ticket.ImageUrl" alt="Ticket image">
+                                <div class="carousel-caption d-none d-md-block">
+                                    <h5>@ticket.</h5>
+                                    <p>@ticket.Date.ToString("HH:mm")</p>
+                                </div>
                             </div>
-                        </div>
+                        }
                     }
                 </div>
-                <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+                <a class="carousel-control-prev" href="#carouselTicketsControls" role="button" data-slide="prev">
                     <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                    <span class="sr-only">Previous</span>
+                    
                 </a>
-                <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+                <a class="carousel-control-next" href="#carouselTicketsControls" role="button" data-slide="next">
                     <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                    <span class="sr-only">Next</span>
+                    
                 </a>
             </div>
-        </div> *@
+        </div> 
     </div>
 </body>
