--- a/ICinema/Views/AppUser/Register.cshtml
+++ b/ICinema/Views/AppUser/Register.cshtml
@@ -22,6 +22,10 @@
 		<input asp-for="ConfirmPassword" class="form-control" placeholder="Confirm Password"> </input>
 		<span asp-validation-for="ConfirmPassword" class="text-danger"></span>
 	</div>
+	<div class="form-group form-check">
+		<input asp-for="IsAdmin" class="form-check-input" />
+		<label asp-for="IsAdmin" class="form-check-label"></label>
+	</div>
 	<div class="row">
 		<div class="col-6">
 			<button style="width:100%" type="submit" class="btn btn-primary">Register</button>
