--- a/ICinema/Views/Film/Index.cshtml
+++ b/ICinema/Views/Film/Index.cshtml
@@ -17,6 +17,7 @@
 </style>
 
 <div class="album py-5">
+    <div class="container">
 
         <div class="row">
             @if (Model != null)
@@ -44,4 +45,5 @@
                 <p>No items found.</p>
             }
         </div>
+    </div>
 </div>
