--- a/ICinema/Views/Shared/_Layout.cshtml
+++ b/ICinema/Views/Shared/_Layout.cshtml
@@ -26,7 +26,12 @@
                         <li class="nav-item">
                             <a class="nav-link text-white" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                         </li>
-                        
+                        @if (User.IsInRole("Admin"))
+                        {
+                            <li class="nav-item">
+                                <a class="nav-link text-white" asp-area="" asp-controller="Admin" asp-action="CreateTicket">Create Ticket</a>
+                            </li>
+                        }
                         <li class="nav-item profile">
                             <a class="nav-link profile-link" asp-area="" asp-controller="AppUser" asp-action="Index"></a>
                         </li>
