--- a/ICinema/wwwroot/css/site.css
+++ b/ICinema/wwwroot/css/site.css
@@ -15,11 +15,14 @@ html {
 html {
   position: relative;
   min-height: 100%;
+   width: 100%;
 }
 
 body {
     background-color: #1a1a1a;
-    color: white; 
+    color: white;
+    width: 100%;
+    
 }
 
 .navbar {
@@ -63,3 +66,17 @@ footer a:hover {
 }
 
 
+.container,
+.container-fluid,
+.container-xxl,
+.container-xl,
+.container-lg,
+.container-md,
+.container-sm {
+    width: 100% !important;
+    max-width: 100% !important;
+    padding-right: 15px !important;
+    padding-left: 15px !important;
+    margin-right: 0 !important;
+    margin-left: 0 !important;
+}
