--- a/ICinema/Views/AppUser/Index.cshtml
+++ b/ICinema/Views/AppUser/Index.cshtml
@@ -34,7 +34,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-white" asp-area="" asp-controller="AppUser" asp-action="LogOut">Log Out</a>
                         </li>
-
+                        <li class="nav-item">
+                            <a class="nav-link text-white" asp-area="" asp-controller="AppUser" asp-action="DeleteUser">Delete User</a>
+                        </li>
                     </ul>
                 </div>
             </div>
