--- a/ICinema/Views/Home/Index.cshtml
+++ b/ICinema/Views/Home/Index.cshtml
@@ -20,11 +20,35 @@
             width: 100%;
         }
 
+        .container{
+            padding-right: 0px !important;
+            padding-left: 0px !important;
+        }
+
+        .border-bottom {
+            border-bottom: 0px solid #dee2e6 !important;
+        }
+
+        .mb-3 {
+            margin-bottom: 0rem !important;
+        }
+
+        .pb-3 {
+            padding-bottom: 0rem !important;
+        }
+
+        .carousel-inner .item img {
+            width: 100%;
+        }
+
+        .carousel-inner .item active img {
+            width: 100%;
+        }
 
     </style>
 </head>
 <body>
-    <div id="myCarousel" class="carousel slide" data-ride="carousel">
+    <div id="myCarousel" class="carousel slide" data-ride="carousel" height="20%">
         <!-- Indicators -->
         <ol class="carousel-indicators">
             <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
@@ -35,7 +59,7 @@
         <!-- Wrapper for slides -->
         <div class="carousel-inner">
             <div class="item active">
-                <img src="https://www.w3schools.com/bootstrap/la.jpg" alt="Chania" class="img-responsive">
+                <img src="https://itc.ua/wp-content/uploads/2024/01/mY3CRicUMaX3Btxv8yspud75UJu.jpg" alt="Chania" class="img-responsive">
                 <div class="carousel-caption">
                     <h3>Los Angeles</h3>
                     <p>LA is always so much fun!</p>
