--- a/ICinema/wwwroot/css/site.css
+++ b/ICinema/wwwroot/css/site.css
@@ -8,6 +8,12 @@ html {
   }
 }
 
+@media (min-width: 768px) {
+    .navbar {
+        border-radius: 0px !important;
+    }
+}
+
 .btn:focus, .btn:active:focus, .btn-link.nav-link:focus, .form-control:focus, .form-check-input:focus {
   box-shadow: 0 0 0 0.1rem white, 0 0 0 0.25rem #258cfb;
 }
