--- a/ICinema/Views/Schedule/Index.cshtml
+++ b/ICinema/Views/Schedule/Index.cshtml
@@ -1,5 +1,47 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
-@{
-}
+﻿@model IEnumerable<Film>
+
+<style>
+    .card-img-top {
+        width: 100%;
+        height: 225px;
+        object-fit: cover;
+    }
+
+    .card-text {
+        color: black;
+    }
+
+    .album py-5 bg-light {
+    }
+</style>
+
+<div class="album py-5">
+    <div class="container">
+
+        <div class="row">
+            @if (Model != null)
+            {
+                @foreach (var item in Model)
+                {
+                    <div class="col-md-4">
+                        <div class="card mb-4 box-shadow">
+                            <img class="card-img-top" alt="Thumbnail [100%x225]" src="@item.Image">
+                            <div class="card-body">
+                                <p class="card-text">@item.Title</p>
+                                <div class="d-flex justify-content-between align-items-center">
+                                    <div class="btn-group">
+                                        <button type="button" class="btn btn-sm btn-outline-secondary">Get ticket</button>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                }
+            }
+            else
+            {
+                <p>No items found.</p>
+            }
+        </div>
+    </div>
+</div>
