--- a/ICinema/Views/Shared/_Layout.cshtml
+++ b/ICinema/Views/Shared/_Layout.cshtml
@@ -37,6 +37,9 @@
                             <li class="nav-item">
                                 <a class="nav-link text-white" asp-area="" asp-controller="Admin" asp-action="SettingUpSendingService">Set Up Service</a>
                             </li>
+                            <li class="nav-item">
+                                <a class="nav-link text-white" asp-area="" asp-controller="Admin" asp-action="CreateHall">Create Hall</a>
+                            </li>
                         }
                         <li class="nav-item profile">
                             <a class="nav-link profile-link" asp-area="" asp-controller="AppUser" asp-action="Index"></a>
