--- a/ICinema/Views/Admin/CreateHall.cshtml
+++ b/ICinema/Views/Admin/CreateHall.cshtml
@@ -42,7 +42,7 @@
                             if (Model.Seats[row][seat]._IsColumn)
                                 seatClass = "column";
                             else 
-                                seatClass = Model.Seats[row][seat]._IsOccupied == false ? "available" : "occupied";
+                                seatClass ="available";
                             <div class="seat @seatClass"></div>
                         }
                     </div>
