--- a/ICinema/Views/Admin/HallsPage.cshtml
+++ b/ICinema/Views/Admin/HallsPage.cshtml
@@ -22,7 +22,7 @@
                                 if (hallVM.Seats[row][seat]._IsColumn)
                                     seatClass = "column";
                                 else
-                                    seatClass = hallVM.Seats[row][seat]._IsOccupied == false ? "available" : "occupied";
+                                    seatClass = "available" ;
                                 <div class="seat @seatClass"></div>
                             }
                         </div>
