--- a/ICinema/Views/AppUser/Index.cshtml
+++ b/ICinema/Views/AppUser/Index.cshtml
@@ -116,7 +116,7 @@
                                 <img class="d-block w-100" src="@ticket.ImageUrl" alt="Ticket image">
                                 <div class="carousel-caption d-none d-md-block">
                                     <h5>@ticket.</h5>
-                                    <p>@ticket.Date.ToString("HH:mm")</p>
+                                    <p>@ticket.Screaning.Day.ToString("HH:mm")</p>
                                 </div>
                             </div>
                         }
