--- a/ICinema/Views/Schedule/Index.cshtml
+++ b/ICinema/Views/Schedule/Index.cshtml
@@ -1,4 +1,9 @@
-﻿@model IEnumerable<Film>
+﻿@using ICinema.ViewModels
+@model IEnumerable<ScheduleViewModel>
+
+@{
+    ViewData["Title"] = "Schedule";
+}
 
 <style>
     .card-img-top {
@@ -25,12 +30,12 @@
                 {
                     <div class="col-md-4">
                         <div class="card mb-4 box-shadow">
-                            <img class="card-img-top" alt="Thumbnail [100%x225]" src="@item.Image">
+                            <img class="card-img-top" alt="Thumbnail [100%x225]" src="@item.Film.Image">
                             <div class="card-body">
-                                <p class="card-text">@item.Title</p>
+                                <p class="card-text">@item.Film.Title</p>
                                 <div class="d-flex justify-content-between align-items-center">
                                     <div class="btn-group">
-                                        <button type="button" class="btn btn-sm btn-outline-secondary">Get ticket</button>
+                                        <button type="button" class="btn btn-sm btn-outline-secondary">@item.Schedule.Time</button>
                                     </div>
                                 </div>
                             </div>
