--- a/ICinema/Views/Home/Index.cshtml
+++ b/ICinema/Views/Home/Index.cshtml
@@ -45,6 +45,10 @@
             width: 100%;
         }
 
+        .navbar {
+            margin-bottom: 0px;
+        }
+
     </style>
 </head>
 <body>
