Added Views: CreateFilm, CreateSchedule and CreateScreaning

--- a/ICinema/Views/AppUser/UserCart.cshtml
+++ b/ICinema/Views/AppUser/UserCart.cshtml
@@ -1,7 +1,7 @@
 ﻿@using ICinema.ViewModels
 @model CartVM
 @{
-    ViewData["Title"]="Cart"
+    ViewData["Title"] = "Cart";
 }
 <div style="display: flex; align-items: flex-start;">
     <img src=@Model.ImageUrl alt=@Model.Title style="width: 150px; height: auto; margin-right: 20px;">
