--- a/ICinema/Views/Shared/_Layout.cshtml
+++ b/ICinema/Views/Shared/_Layout.cshtml
@@ -40,6 +40,9 @@
                             <li class="nav-item">
                                 <a class="nav-link text-white" asp-area="" asp-controller="Admin" asp-action="HallsPage">Halls</a>
                             </li>
+                            <li class="nav-item">
+                                <a class="nav-link text-white" asp-area="" asp-controller="Admin" asp-action="CreateFilm">Create Film</a>
+                            </li>
                         }
                         <li class="nav-item profile">
                             <a class="nav-link profile-link" asp-area="" asp-controller="AppUser" asp-action="Index"></a>
