Fixed FilmCreation functional

--- a/ICinema/Views/Admin/CreateSchedule.cshtml
+++ b/ICinema/Views/Admin/CreateSchedule.cshtml
@@ -5,17 +5,24 @@
 }
 <body>
 	<h2>@ViewData["Title"]</h2>
-	<form method="post" asp-action="CreateShedule" asp-controller="Admin">
+	<form method="post" asp-action="CreateSchedule" asp-controller="Admin">
 		<div class="form-group">
 			<label asp-for=@Model.Day class="control-label"></label>
 			<input asp-for=@Model.Day class="form-control" placeholder="Enter Date"></input>
 			<span asp-validation-for=@Model.Day class="text-danger"></span>
 		</div>
 		<div class="form-group">
-			<label asp-for=@Model.NumberOfScreanings class="control-label"></label>
-			<input asp-for=@Model.NumberOfScreanings class="form-control" placeholder="Enter Number Of Screanings"></input>
-			<span asp-validation-for=@Model.NumberOfScreanings class="text-danger"></span>
+			<input type="hidden" asp-for="@Model.Film.Id" />
+			<input type="hidden" asp-for="@Model.Film.Title" />
+			<input type="hidden" asp-for="@Model.Film.Image" />
+			<span asp-validation-for=@Model.Film class="text-danger"></span>
 		</div>
+		<div class="form-group">
+
+			<input type="hidden" asp-for=@Model.FilmId />
+			<span asp-validation-for=@Model.FilmId class="text-danger"></span>
+		</div>
+		
 
 		</div>
 		<div class="row">
@@ -28,4 +35,7 @@
 
 		</div>
 	</form>
+	<div>
+		<span>@Html.ValidationSummary(true, "", new { @class = "text-danger" })</span>
+	</div>
 </body>
