--- a/ICinema/Views/AppUser/Login.cshtml
+++ b/ICinema/Views/AppUser/Login.cshtml
@@ -17,6 +17,9 @@
 		<input asp-for="Password" class="form-control" placeholder="Enter Password"> </input>
 		<span asp-validation-for="Password" class="text-danger"></span>
 	</div>
+	<div class="form-group">
+		<input type="hidden" name="returnUrl" value="@ViewData["ReturnUrl"]"></input>
+	</div>
 	<div class="row">
 		<div class="col-6">
 			<button style="width:100%" type="submit" class="btn btn-primary">Login</button>
