--- a/ICinema/Views/Shared/_Layout.cshtml
+++ b/ICinema/Views/Shared/_Layout.cshtml
@@ -44,6 +44,9 @@
                                 <a class="nav-link text-white" asp-area="" asp-controller="Admin" asp-action="CreateFilm">Create Film</a>
                             </li>
                         }
+                        <li class="nav-item">
+                            <a class="nav-link text-white" asp-area="" asp-controller="Cart" asp-action="DashBoard">Cart</a>
+                        </li>
                         <li class="nav-item profile">
                             <a class="nav-link profile-link" asp-area="" asp-controller="AppUser" asp-action="Index"></a>
                         </li>
