--- a/ICinema/wwwroot/css/site.css
+++ b/ICinema/wwwroot/css/site.css
@@ -81,8 +81,32 @@ footer a:hover {
 .container-sm {
     width: 100% !important;
     max-width: 100% !important;
-    padding-right: 15px !important;
-    padding-left: 15px !important;
+    padding-right: 0 !important;
+    padding-left: 0 !important;
     margin-right: 0 !important;
     margin-left: 0 !important;
+}
+.seat {
+    width: 30px;
+    height: 30px;
+    margin: 5px;
+    display: inline-block;
+    text-align: center;
+    line-height: 30px;
+    cursor: pointer;
+}
+
+.available {
+    background-color: green;
+    color: white;
+}
+
+.occupied {
+    background-color: red;
+    color: white;
+}
+
+.column {
+    background-color: gray;
+    color: white;
 }
